k8s-resource/ingress/was-libiary/svc-WAS.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-app
  labels:
    run: was-app
spec:
  selector:
    run: was-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
